--- a/complex.html
+++ b/complex.html
@@ -62,7 +62,7 @@
                             </svg>
                             КОНТЕКСТНАЯ РЕКЛАМА
                         </a>
-                    </ali>
+                    </li>
                     <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -156,13 +156,13 @@
                 <div class="hero__second-row">
                     <ul class="benefits__list benefits__list_complex">
                         <li class="benefits__item benefits__item_complex">
-                            Опыт работы с 2012<br>года: работали во всех<br>нишах
+                            Опыт работы с 2012 года: работали во всех нишах
                         </li>
                         <li class="benefits__item benefits__item_complex">
-                            Авторский подход к<br>работе с РСЯ и<br>сегментами аудитории
+                            Авторский подход к работе с РСЯ и сегментами аудитории
                         </li>
                         <li class="benefits__item benefits__item_complex">
-                            Сертифицированные<br>специалисты Яндекс и<br>Google
+                            Сертифицированные специалисты Яндекс и Google
                         </li>
                     </ul>
                 </div>
@@ -189,7 +189,7 @@
                 <div class="prices__info">Стоимость настройки и ведения: <span class="blue">20 000 руб/мес.</span></div>
                 <div class="prices__links">
                     <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
-                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
             <div class="prices__block prices__block_blue prices__block_blue_complex">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="prices__links">
                     <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
-                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
             <div class="prices__block prices__block_pink prices__block_pink_complex">
@@ -219,7 +219,7 @@
                 </div>
                 <div class="prices__links">
                     <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
-                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
         </div>
@@ -537,7 +537,7 @@
 <div class="s_voronka">
     <div class="wrapper">
         <div class="voronka">
-            <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ<br>ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
+            <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
             <ul class="voronka__list voronka__list_blue">
                 <li class="voronka__line">
                     <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
