--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
                             </svg>
                             КОНТЕКСТНАЯ РЕКЛАМА
                         </a>
-                    </ali>
+                    </li>
                     <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -132,13 +132,6 @@
 
         </div>
     </div>
-
-    <div class="line_white"></div>
-
-    <!--    <div class="wrapper">-->
-    <!--        <div class="header__bottom">-->
-    <!--        </div>-->
-    <!--    </div>-->
 </header>
 
 <div class="s_services">
@@ -158,7 +151,7 @@
                     <div class="services__image-block"></div>
                     <div class="services__info">
                         <div class="services__info__first-row">
-                            <h2 class="services__item__title">КОНТЕКСТНАЯ<br>РЕКЛАМА</h2>
+                            <h2 class="services__item__title">КОНТЕКСТНАЯ РЕКЛАМА</h2>
                             <a href="#" class="btn btn_round btn_round_white">
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -183,33 +176,7 @@
                     <div class="services__image-block"></div>
                     <div class="services__info">
                         <div class="services__info__first-row">
-                            <h2 class="services__item__title">ПРОДВИЖЕНИЕ<br>В СОЦСЕТЯХ</h2>
-                            <a href="#" class="btn btn_round btn_round_white">
-                                <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
-                                          fill="#1378BA"/>
-                                </svg>
-                            </a>
-                        </div>
-                        <ul class="services__info__list">
-                            <li class="services__info__list__item">Подкатегория номер один</li>
-                            <li class="services__info__list__item">Еще одна</li>
-                            <li class="services__info__list__item">Реклама на ютюбе</li>
-                            <li class="services__info__list__item">Реклама в поиске</li>
-                        </ul>
-                        <div class="services__info__button-wrapper">
-                            <a href="#" class="btn btn_small btn_blue">ПОДРОБНЕЕ</a>
-                        </div>
-
-                    </div>
-                </li>
-
-                <li class="services__item">
-                    <div class="services__image-block"></div>
-                    <div class="services__info">
-                        <div class="services__info__first-row">
-                            <h2 class="services__item__title">МЕДИЙНАЯ<br>РЕКЛАМА</h2>
+                            <h2 class="services__item__title">ПРОДВИЖЕНИЕ <nobr>В СОЦСЕТЯХ</nobr></h2>
                             <a href="#" class="btn btn_round btn_round_white">
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -235,7 +202,7 @@
                     <div class="services__image-block"></div>
                     <div class="services__info">
                         <div class="services__info__first-row">
-                            <h2 class="services__item__title">АНАЛИТИКА<br>САЙТОВ</h2>
+                            <h2 class="services__item__title">МЕДИЙНАЯ РЕКЛАМА</h2>
                             <a href="#" class="btn btn_round btn_round_white">
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -261,7 +228,7 @@
                     <div class="services__image-block"></div>
                     <div class="services__info">
                         <div class="services__info__first-row">
-                            <h2 class="services__item__title">SEO<br>ПРОДВИЖЕНИЕ</h2>
+                            <h2 class="services__item__title">АНАЛИТИКА САЙТОВ</h2>
                             <a href="#" class="btn btn_round btn_round_white">
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -287,7 +254,33 @@
                     <div class="services__image-block"></div>
                     <div class="services__info">
                         <div class="services__info__first-row">
-                            <h2 class="services__item__title">РАЗРАБОТКА<br>САЙТОВ</h2>
+                            <h2 class="services__item__title">SEO ПРОДВИЖЕНИЕ</h2>
+                            <a href="#" class="btn btn_round btn_round_white">
+                                <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                          fill="#1378BA"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <ul class="services__info__list">
+                            <li class="services__info__list__item">Подкатегория номер один</li>
+                            <li class="services__info__list__item">Еще одна</li>
+                            <li class="services__info__list__item">Реклама на ютюбе</li>
+                            <li class="services__info__list__item">Реклама в поиске</li>
+                        </ul>
+                        <div class="services__info__button-wrapper">
+                            <a href="#" class="btn btn_small btn_blue">ПОДРОБНЕЕ</a>
+                        </div>
+
+                    </div>
+                </li>
+
+                <li class="services__item">
+                    <div class="services__image-block"></div>
+                    <div class="services__info">
+                        <div class="services__info__first-row">
+                            <h2 class="services__item__title">РАЗРАБОТКА САЙТОВ</h2>
                             <a href="#" class="btn btn_round btn_round_white">
                                 <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
