--- a/web-analit.html
+++ b/web-analit.html
@@ -150,13 +150,13 @@
                 <div class="hero__second-row">
                     <ul class="benefits__list benefits__list_weba">
                         <li class="benefits__item benefits__item_weba">
-                            Аудит сайта и<br>социальных сетей
+                            Аудит сайта и социальных сетей
                         </li>
                         <li class="benefits__item benefits__item_weba">
-                            Анализ трафика более<br>чем по 50 показателей
+                            Анализ трафика более чем по 50 показателей
                         </li>
-                        <li class="benefits__item benefits__item_complex">
-                            Сертифицированные<br>специалисты Яндекс и<br>Google
+                        <li class="benefits__item benefits__item_weba">
+                            Сертифицированные специалисты Яндекс и Google
                         </li>
                     </ul>
                 </div>
@@ -441,7 +441,7 @@
                 </div>
                 <div class="prices__links">
                     <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
-                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
             <div class="prices__block prices__block_pink prices__block_pink_big">
@@ -458,7 +458,7 @@
                 </div>
                 <div class="prices__links">
                     <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
-                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
             <div class="prices__block prices__block_olive prices__block_olive_web">
