--- a/complex.html
+++ b/complex.html
@@ -540,34 +540,34 @@
             <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
             <ul class="voronka__list voronka__list_blue">
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
+                    <span class="voronka__line__block voronka__line__block_left">Рассказываем о продукте</span>
                     <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают продукт, ищут решения проблемы</span>
-                    <span class="voronka__line__block voronka__line__block_right">Баннерная реклама в РСЯ и КМС,<br>видеореклама и YouTube</span>
+                    <span class="voronka__line__block voronka__line__block_right">Баннерная реклама в РСЯ и КМС, видеореклама и YouTube</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес,<br>стимулируем покупку</span>
+                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес, стимулируем покупку</span>
                     <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают его изучать</span>
-                    <span class="voronka__line__block voronka__line__block_right">Графическая рреклама в сетях (РСЯ<br>и КМС), поисковый баннер на<br>Яндексе</span>
+                    <span class="voronka__line__block voronka__line__block_right">Графическая реклама в сетях (РСЯ и КМС), поисковый баннер на Яндексе</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Привлекаем<br>пользователя на сайте</span>
+                    <span class="voronka__line__block voronka__line__block_left">Привлекаем пользователя на сайте</span>
                     <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где приобрести продукт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Поисковые кампании Яндекс.Директ,<br>Google.Ads, поисковы ремаркетинг</span>
+                    <span class="voronka__line__block voronka__line__block_right">Поисковые кампании Яндекс.Директ, Google.Ads, поисковы ремаркетинг</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей,<br>ушедших с сайта без покупки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
                     <span class="voronka__line__block voronka__line__block_center">Перешли на сайт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads,<br>Facebook, рассылка Вконтакте, Instagram</span>
+                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей,<br>ушедших с сайта без покупки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
                     <span class="voronka__line__block voronka__line__block_center">Купили товар на сайте</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads,<br>Facebook, рассылка Вконтакте, Instagram</span>
+                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
                 </li>
                  <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Запускаем локальную рекламу,<br>стимулируем посещение точки</span>
+                    <span class="voronka__line__block voronka__line__block_left">Запускаем локальную рекламу, стимулируем посещение точки</span>
                     <span class="voronka__line__block voronka__line__block_center">Находятся рядом с офисом</span>
-                    <span class="voronka__line__block voronka__line__block_right">Гиперлокальная реклама Яндекс.Директ,<br>реклама по районам в Google.Ads</span>
+                    <span class="voronka__line__block voronka__line__block_right">Гиперлокальная реклама Яндекс.Директ, реклама по районам в Google.Ads</span>
                 </li>
             </ul>
         </div>
