--- a/case.html
+++ b/case.html
@@ -182,7 +182,7 @@
     <div class="wrapper_fullHD">
         <div class="target">
             <div class="wrapper">
-                <img src="images/case_target_img.jpg" class="approach__img">
+                <img src="images/case_target_img.jpg" class="target__img_main">
                 <div class="approach__text-block approach__text-block_case">
                     <h2 class="title"><span class="green">ЦЕЛИ</span> И ЗАДАЧИ КЛИЕНТА</h2>
 
