--- a/portfolio.html
+++ b/portfolio.html
@@ -226,11 +226,11 @@
         </button>
 
         <ul class="portfolio__pagination__list">
-          <li><button class="portfolio__pagination__btn">1</button></li>
-          <li><button class="portfolio__pagination__btn">2</button></li>
-          <li><button class="portfolio__pagination__btn active">3</button></li>
-          <li><button class="portfolio__pagination__btn">...</button></li>
-          <li><button class="portfolio__pagination__btn">28</button></li>
+          <li><a class="portfolio__pagination__btn">1</a></li>
+          <li><a class="portfolio__pagination__btn">2</a></li>
+          <li><a class="portfolio__pagination__btn active">3</a></li>
+          <li><a class="portfolio__pagination__btn">...</a></li>
+          <li><a class="portfolio__pagination__btn">28</a></li>
         </ul>
 
         <button type="button" class="portfolio__pagination__btn portfolio__pagination__btn_next">
