--- a/social.html
+++ b/social.html
@@ -466,9 +466,6 @@
             <div class="wrapper_right">
                 <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД К РЕКЛАМЕ<br>ВКОНТАКТЕ, FACEBOOK И
                     INSTAGRAM</h2>
-
-                <img src="images/bg_social_avtor.jpg" class="approach__img_social">
-
                 <div class="approach__text-block_social">
                     <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
                         объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
@@ -482,6 +479,9 @@
                         производственный план целого ряда внеочередных мероприятий с учётом комплекса системы массового
                         участия. </p>
                 </div>
+
+                <img src="images/bg_social_avtor.jpg" class="approach__img_social">
+
             </div>
         </div>
     </div>
@@ -490,32 +490,32 @@
 <div class="s_voronka">
     <div class="wrapper">
         <div class="voronka voronka_green">
-            <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ<br>ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
+            <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
             <ul class="voronka__list voronka__list_green">
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
-                    <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают<br>продукт, ищут решения проблемы</span>
-                    <span class="voronka__line__block voronka__line__block_right">Реклама по полу, возрасту, интересам.<br>Сегментирование аудитории.</span>
+                    <span class="voronka__line__block voronka__line__block_left">Рассказываем о продукте</span>
+                    <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают продукт, ищут решения проблемы</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама по полу, возрасту, интересам. Сегментирование аудитории.</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес,<br>стимулируем покупку</span>
-                    <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают<br>его изучать</span>
-                    <span class="voronka__line__block voronka__line__block_right">Часть трафика ведется на сайт, часть - на<br>подписку в соц сети. Анализ конверсии.</span>
+                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес, стимулируем покупку</span>
+                    <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают его изучать</span>
+                    <span class="voronka__line__block voronka__line__block_right">Часть трафика ведется на сайт, часть - на подписку в соц сети. Анализ конверсии.</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Стимулируем<br>покупку</span>
-                    <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где<br>приобрести продукт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Реклама в формате лид-форм,<br>на взаимодействовавших с аккаунтом</span>
+                    <span class="voronka__line__block voronka__line__block_left">Стимулируем покупку</span>
+                    <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где приобрести продукт</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама в формате лид-форм, на взаимодействовавших с аккаунтом</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Догоняем<br>аудиторию сайта</span>
-                    <span class="voronka__line__block voronka__line__block_center">Были на сайте, но не<br>совершили заказ</span>
-                    <span class="voronka__line__block voronka__line__block_right">Рекламный трафик на подписку<br>и на лид-магнит</span>
+                    <span class="voronka__line__block voronka__line__block_left">Догоняем аудиторию сайта</span>
+                    <span class="voronka__line__block voronka__line__block_center">Были на сайте, но не совершили заказ</span>
+                    <span class="voronka__line__block voronka__line__block_right">Рекламный трафик на подписку и на лид-магнит</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Прогрев и расширение<br>аудитории</span>
-                    <span class="voronka__line__block voronka__line__block_center">Находятся рядом<br>с офисом</span>
-                    <span class="voronka__line__block voronka__line__block_right">Реклама по базе похожей аудитории<br>(look-a-like). Рассылка по базе подписчиков</span>
+                    <span class="voronka__line__block voronka__line__block_left">Прогрев и расширение аудитории</span>
+                    <span class="voronka__line__block voronka__line__block_center">Находятся рядом с офисом</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама по базе похожей аудитории (look-a-like). Рассылка по базе подписчиков</span>
                 </li>
             </ul>
         </div>
