--- a/web-analit.html
+++ b/web-analit.html
@@ -340,13 +340,13 @@
 
 <div class="s_approach">
     <div class="wrapper_fullHD">
-        <div class="approach approach_social">
+        <div class="approach approach_web">
+            <h2 class="title"><span class="green">АНАЛИТИКА</span> – ФУНДАМЕНТ УСПЕШНОЙ<br>РЕКЛАМНОЙ КАМПАНИИ</h2>
+
             <div class="wrapper_right">
-                <h2 class="title"><span class="green">АНАЛИТИКА</span> – ФУНДАМЕНТ УСПЕШНОЙ<br>РЕКЛАМНОЙ КАМПАНИИ</h2>
+                <img src="images/bg_social_avtor.jpg" class="approach__img_web">
 
-                <img src="images/bg_social_avtor.jpg" class="approach__img_social">
-
-                <div class="approach__text-block_social">
+                <div class="approach__text-block_web">
                     <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
                         объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
                         исследований способствует подготовке и реализации поставленных обществом задач. Не следует,
